@@ -16,6 +16,7 @@ import com.team573.gongguri.domain.groupPurchase.repository.GroupPurchaseReposit
 import com.team573.gongguri.domain.member.entity.Member;
 import com.team573.gongguri.domain.member.entity.Univ;
 import com.team573.gongguri.domain.member.repository.MemberRepository;
+import com.team573.gongguri.domain.member.service.MemberService;
 import com.team573.gongguri.global.exception.CustomErrorCode;
 import com.team573.gongguri.global.exception.CustomException;
 import java.util.List;
@@ -37,16 +38,38 @@ public class GroupPurchaseService {
     private final ChatService chatService;
     private final GroupPurchaseJpqlRepository groupPurchaseJpqlRepository;
     private final GroupPurchaseParticipantRepository groupPurchaseParticipantRepository;
+    private final MemberService memberService;
+
+
+    private GroupPurchase getActiveGroupPurchase(Long id) {
+        GroupPurchase groupPurchase = groupPurchaseRepository.findByGroupIdAndIsDeletedFalse(id)
+                .orElseThrow(() -> new CustomException(CustomErrorCode.NOT_FOUND_GROUP_PURCHASE));
+        return groupPurchase;
+    }
+
+    private int getCurrentParticipantsCount(Long id) {
+        int currentParticipants = participantRepository.countByGroupPurchase_GroupId(id);
+        return currentParticipants;
+    }
+
+    private void registerParticipant(GroupPurchase groupPurchase, Member member) {
+        try {
+            GroupPurchaseParticipant participant = GroupPurchaseParticipantMapper.toEntity(groupPurchase, member);
+            participantRepository.save(participant);
+        } catch (Exception e) {
+            log.error("참여자 등록 실패", e);
+            throw new CustomException(CustomErrorCode.JOIN_FAILED);
+        }
+    }
 
     @Transactional
-    public GroupPurchaseResponseDto add(GroupPurchaseRequestDto dto, String email) {
-        Member writer = memberRepository.findByEmail(email)
-                .orElseThrow(() -> new CustomException(CustomErrorCode.NOT_FOUND_MEMBER));
+    public GroupPurchaseCreateResponseDto add(GroupPurchaseRequestDto dto, Long memberId) {
+        Member writer = memberService.getMemberById(memberId);
 
         Univ univ = writer.getUniv();
         ChatRoom chatRoom;
         try {
-            chatRoom = chatService.addChatRoom(email);
+            chatRoom = chatService.addChatRoom(writer.getEmail());
         } catch (Exception e) {
             log.error("채팅방 생성 실패", e);
             throw new CustomException(CustomErrorCode.CREATE_FAILED_GROUP_PURCHASE);
@@ -62,67 +85,37 @@ public class GroupPurchaseService {
             throw new CustomException(CustomErrorCode.CREATE_FAILED_GROUP_PURCHASE);
         }
 
-        try {
-            GroupPurchaseParticipant participant = GroupPurchaseParticipantMapper.toEntity(groupPurchase, writer);
-            participantRepository.save(participant);
-        } catch (Exception e) {
-            log.error("작성자를 참여자로 등록 실패", e);
-            throw new CustomException(CustomErrorCode.JOIN_FAILED);
-        }
-
-        int currentParticipants = participantRepository.countByGroupPurchase_GroupId(groupPurchase.getGroupId());
-        boolean isParticipated = true;
-
-        return GroupPurchaseMapper.toDto(groupPurchase, currentParticipants, isParticipated);
+        registerParticipant(groupPurchase, writer);
+        return GroupPurchaseMapper.toCreateDto(groupPurchase);
     }
-
     @Transactional(readOnly = true)
-    public GroupPurchaseResponseDto get(Long id, String email) {
-        Member member = memberRepository.findByEmail(email)
-                .orElseThrow(() -> new CustomException(CustomErrorCode.NOT_FOUND_MEMBER));
+    public GroupPurchaseDetailResponseDto get(Long id, Long memberId) {
         GroupPurchase groupPurchase = groupPurchaseRepository.findById(id)
                 .orElseThrow(() -> new CustomException(CustomErrorCode.NOT_FOUND_GROUP_PURCHASE));
-        int currentParticipants = participantRepository.countByGroupPurchase_GroupId(id);
-        boolean isParticipated = participantRepository.existsByGroupPurchase_GroupIdAndMember_Email(id, email);
+        int currentParticipants = getCurrentParticipantsCount(id);
+        boolean isParticipated = participantRepository.existsByGroupPurchase_GroupIdAndMember_MemberId(id, memberId);
 
-        return GroupPurchaseMapper.toDto(groupPurchase, currentParticipants, isParticipated);
-    }
-
-    @Deprecated
-    @Transactional(readOnly = true)
-    public List<GroupPurchaseResponseDto> getAll(String email) {
-        return groupPurchaseRepository.findAllActive().stream()
-                .map(entity -> {
-                    int currentParticipants = participantRepository.countByGroupPurchase_GroupId(entity.getGroupId());
-                    boolean isParticipated = participantRepository.existsByGroupPurchase_GroupIdAndMember_Email(entity.getGroupId(), email);
-                    return GroupPurchaseMapper.toDto(entity, currentParticipants, isParticipated);
-                })
-                .collect(Collectors.toList());
+        return GroupPurchaseMapper.toDetailDto(groupPurchase, currentParticipants, isParticipated);
     }
 
     @Transactional(readOnly = true)
-    public List<GroupPurchaseResponseDto> getAllByCursor(
+    public List<GroupPurchaseListResponseDto> getAllByCursor(
             Long cursorId,
             List<ProgressStatus> statuses,
-            int size,
-            String email
+            int size
     ) {
         List<GroupPurchaseWithParticipantCountDto> groupPurchases =
                 groupPurchaseJpqlRepository.findAllWithCursorAndParticipantCount(cursorId, statuses, size);
 
         return groupPurchases.stream()
-                .map(dto -> {
-
-                    return GroupPurchaseMapper.toDto(dto, null); // ← dto 기반 변환 메서드 필요
-                })
-                .collect(Collectors.toList());
+                .map(GroupPurchaseMapper::toListDto)
+                .toList();
     }
 
     @Transactional
-    public GroupPurchaseResponseDto update(Long id, GroupPurchaseRequestDto dto) {
+    public GroupPurchaseUpdateResponseDto update(Long id, GroupPurchaseRequestDto dto) {
 
-        GroupPurchase groupPurchase = groupPurchaseRepository.findByGroupIdAndIsDeletedFalse(id)
-                .orElseThrow(() -> new CustomException(CustomErrorCode.NOT_FOUND_GROUP_PURCHASE));
+        GroupPurchase groupPurchase = getActiveGroupPurchase(id);
         try {
             groupPurchase.update(
                     dto.title(),
@@ -138,43 +131,33 @@ public class GroupPurchaseService {
             log.error("공동구매 수정 실패", e);
             throw new CustomException(CustomErrorCode.UPDATE_FAILED_GROUP_PURCHASE);
         }
-        return GroupPurchaseMapper.toDto(groupPurchase);
+        return GroupPurchaseMapper.toUpdateDto(groupPurchase);
     }
 
     @Transactional
     public void delete(Long id) {
-        GroupPurchase groupPurchase = groupPurchaseRepository.findByGroupIdAndIsDeletedFalse(id)
-                .orElseThrow(() -> new CustomException(CustomErrorCode.NOT_FOUND_GROUP_PURCHASE));
+        GroupPurchase groupPurchase = getActiveGroupPurchase(id);
         groupPurchase.markAsDeleted();
     }
 
     @Transactional
-    public void join(Long groupId, String email) {
-        Member member = memberRepository.findByEmail(email)
-                .orElseThrow(() -> new CustomException(CustomErrorCode.NOT_FOUND_MEMBER));
+    public void join(Long groupId, Long memberId) {
+        Member member = memberService.getMemberById(memberId);
 
-        GroupPurchase groupPurchase = groupPurchaseRepository.findByGroupIdAndIsDeletedFalse(groupId)
-                .orElseThrow(() -> new CustomException(CustomErrorCode.NOT_FOUND_GROUP_PURCHASE));
+        GroupPurchase groupPurchase = getActiveGroupPurchase(groupId);
 
-        int currentCount = participantRepository.countByGroupPurchase_GroupId(groupId);
+        int currentCount = countParticipantsByStatus(groupPurchase, ParticipationStatus.JOINED).intValue();
         if (currentCount >= groupPurchase.getMaxParticipants()) {
             throw new CustomException(CustomErrorCode.PARTICIPANT_LIMIT_REACHED);
         }
 
-        boolean alreadyJoined = participantRepository.existsByGroupPurchase_GroupIdAndMember_Email(groupId, email);
+        boolean alreadyJoined = participantRepository.existsByGroupPurchase_GroupIdAndMember_MemberId(groupId, memberId);
         if (alreadyJoined) {
             throw new CustomException(CustomErrorCode.ALREADY_JOINED);
         }
 
-        try {
-            GroupPurchaseParticipant participant = GroupPurchaseParticipantMapper.toEntity(groupPurchase, member);
-            participantRepository.save(participant);
-            chatService.addChatParticipation(groupPurchase.getChatRoom().getChatRoomId(), email);
-        } catch (Exception e) {
-            log.error("참여자 등록 실패", e);
-            throw new CustomException(CustomErrorCode.JOIN_FAILED);
-        }
-
+        registerParticipant(groupPurchase, member);
+        chatService.addChatParticipation(groupPurchase.getChatRoom().getChatRoomId(), member.getEmail());
         int afterJoinCount = currentCount + 1;
         if (afterJoinCount >= groupPurchase.getMaxParticipants()) {
             groupPurchase.setProgressStatus(ProgressStatus.CLOSED);
@@ -242,6 +225,7 @@ public class GroupPurchaseService {
 
         memberRepository.findById(memberId).orElseThrow(() -> new CustomException(CustomErrorCode.NOT_FOUND_MEMBER));
 
+
         List<GroupPurchase> purchases;
         List<ProgressStatus> statuses = purchaseFilter.toStatuses();
 
@@ -255,8 +239,8 @@ public class GroupPurchaseService {
                 .map(purchase -> {
                     int currentParticipants = participantRepository.countByGroupPurchase_GroupId(purchase.getGroupId());
                     return GroupPurchaseMapper.toListDto(purchase, currentParticipants);
+
                 })
                 .toList();
     }
-
 }
